--- a/seguridad/bin/.gitignore
+++ b/seguridad/bin/.gitignore
@@ -14,3 +14,10 @@
 /textoclaro2.jpg
 /textoclaro2
 /hola.sig
+/1CN=prueba, C=ES
+/1_CN=prueba, C=ES.sig
+/2_CN=prueba, C=ES.sig
+/3_CN=prueba, C=ES.sig
+/4_CN=prueba, C=ES.sig
+/5_CN=prueba, C=ES.sig
+/6_CN=prueba, C=ES.sig
