Primera consulta casi lista, faltan while tanto en parte cliente como servidor.

--- a/seguridad/bin/.gitignore
+++ b/seguridad/bin/.gitignore
@@ -21,3 +21,11 @@
 /4_CN=prueba, C=ES.sig
 /5_CN=prueba, C=ES.sig
 /6_CN=prueba, C=ES.sig
+/1_CN=prueba, C=ES.cif
+/0_CN=prueba, C=ES.cif
+/2_CN=prueba, C=ES.cif
+/3_CN=prueba, C=ES.cif
+/4_CN=prueba, C=ES.cif
+/5_CN=prueba, C=ES.cif
+/6_CN=prueba, C=ES.cif
+/7_CN=prueba, C=ES.cif
