Limpiando y actualizando codigo

--- a/seguridad/bin/.gitignore
+++ b/seguridad/bin/.gitignore
@@ -6,3 +6,13 @@
 /getacert.cer
 /nada.txt
 /toDo.txt
+/0_CN=prueba, C=ES.sig
+/1_CN=prueba, C=ES.cif
+/1_CN=prueba, C=ES.sig
+/2_CN=prueba, C=ES.cif
+/2_CN=prueba, C=ES.sig
+/3_CN=prueba, C=ES.cif
+/3_CN=prueba, C=ES.sig
+/4_CN=prueba, C=ES.cif
+/4_CN=prueba, C=ES.sig
+/5_CN=prueba, C=ES.cif
